Secure production runtime